# VoorraadTellen

./: .gitignore  CMakeLists.txt  README.md  toolchain_i686-w64-mingw32.cmake  toolchain_x86_64-w64-mingw32.cmake
lib/: exact-int.h  safe_math.h
src/: main.c
